--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -9,11 +13,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  /* margin: 1rem; */
 }
 
 ul {
   /* this removes the dots on the list items*/
-  list-style-type: none;
+  list-style-type: none;  
+  display: flex;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
 }
 
 a {
@@ -23,3 +32,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
