--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -46,3 +46,27 @@ a {
 ul {
   list-style-type: none;
 }
+
+.header,
+.left-side,
+.right-side {
+  display: flex;
+}
+
+.header {
+  padding: 8px;
+  justify-content: space-between;
+}
+
+.left-side,
+.right-side,
+.links{
+  gap: 16px;
+}
+
+.links{
+  display: flex;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+}
