Complete fourth exercise in flex

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,24 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.title, .text{
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.container{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.card{
+  flex: 0 1 200px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+
+  
