--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,26 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+
+.modal{
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+}
+
+.icon{
+  flex-shrink: 0;
+}
+
+.header{
+  font-weight: bold;
+  font-size: 18px;
+  margin-right: auto;
+}
+
+.content{
+  display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
+}
