--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -24,3 +24,53 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.left-links, .right-links{
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
+
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  align-self: center;
+}
+
+.buttons{
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  
+}
+
+button{
+  padding: 4px 10px;
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  margin: 0;
+}
+
+.footer{
+  background-color: #eeeeee;
+}
+
+a{
+  color: black;
+  text-decoration: none;
+}
