Save current state for tomorrow

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,23 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.container{
+  display: flex;
+}
+
+.sidebar{
+  flex: 1;
+}
+
+.card-menu{
+  display: flex;
+  flex-wrap: wrap;
+  flex: 3;
+}
